fixed main content alignment

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -33,7 +33,8 @@ main {
 }
 .main-content {
   @media @desktop {
-    .flexy(flex, row, null, center, center)
+    .flexy(flex, row, null, center, center);
+    align-items: baseline;
   }
 }
 
